[gd_scene load_steps=3 format=3 uid="uid://bv8xf3vnqnruk"]

[ext_resource type="Texture2D" uid="uid://bgjn2h2yg403u" path="res://assets/art/Heart.png" id="1_4sa6f"]
[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_rvp1i"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvp1i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 443.0
offset_bottom = 65.0
scale = Vector2(4, 4)

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4sa6f")
stretch_mode = 2

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4sa6f")
stretch_mode = 2

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4sa6f")
stretch_mode = 2

[node name="Heart4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4sa6f")
stretch_mode = 2

[node name="Heart5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4sa6f")
stretch_mode = 2
